--- a/EmbarkToTalk/src/app/home/home.page.html
+++ b/EmbarkToTalk/src/app/home/home.page.html
@@ -1,20 +1,28 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-content [fullscreen]="true">
+    <div class="ion-padding">
+      <ion-button fill="outline" (click)="presentModal()">Start</ion-button>
+    </div>
+  </ion-content>
+
 </ion-content>
+
+
+
+
+
