--- a/EmbarkToTalk/src/app/components/footer/footer.page.html
+++ b/EmbarkToTalk/src/app/components/footer/footer.page.html
@@ -7,6 +7,7 @@
       <ion-icon name="mic-circle-outline"></ion-icon>
     </ion-button>
     <ion-button color="success" *ngIf="!recordStart">
-      <ion-icon name="checkmark-circle-outline"></ion-icon>    </ion-button>
+      Check    
+    </ion-button>
   </ion-toolbar>
 </ion-footer>
